# crosscell

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  artifacts.json  docker-compose.yml  job_info.json  readme.md  test_output.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark-docker.yml  check-r.yml  ci.yml  release-cli.yml  release-python.yml
benches/: sparse_conversion.rs  streaming_conversion.rs
benchmark/: Dockerfile.benchmark  README.md  docker-compose.benchmark.yml
benchmark/config/: benchmark_testcases.json  datasets.json
benchmark/data/: .gitkeep  datasets.json  test_matrix.json
benchmark/notebooks/: README.md  benchmark_tutorial.ipynb  compute_fidelity.ipynb  compute_robustness.ipynb  compute_roundtrip_fidelity.ipynb  compute_scalability.ipynb  compute_type_fidelity.ipynb  environment_check.ipynb  fig1_design.ipynb  fig2_robustness.ipynb  fig3_performance.ipynb  fig4_scalability.ipynb  fig5_data_fidelity.ipynb  fig6_split_layers.ipynb  fig7_ecosystem.ipynb  supp_fig1_performance_detail.ipynb  supp_fig2_memory_detail.ipynb  supp_fig3_cellxgene.ipynb  supp_fig4_aiready.ipynb
benchmark/results/: .gitkeep  anndataR.json  anndataR_h5ad_read_test.json  cellxgene_scalability.json  convert2anndata.json  crosscell.json  easySCF.json  easyscf_h5ad_to_rds_test.json  easyscf_roundtrip.json  fig3_notebook_results.json  fig5_geneformer.json  fig6_cross_ecosystem.json  memory_scaling.json  memory_scaling_test.json  multi_tool_fidelity.json  nnz_h5ad.json  nnz_rds.json  robustness_benchmark.json  roundtrip_fidelity.json  supp2_notebook_results.json  supp3_notebook_results.json  supp5_notebook_results.json  table1_feature_comparison.csv  tool_versions.json  tools_fidelity.json  type_fidelity.json  zellkonverter.json
benchmark/scripts/: README.md  check_c2a_results.py  check_results.py  compare_tools.py  debug_libpaths.R  draw_fig1_composite.py  draw_fig1b_tool_landscape.py  draw_fig1c_evaluation_framework.py  export_results_to_csv.py  init_basilisk.sh  inspect_h5ad.py  run_all.sh  run_benchmark.py  show_errors.py  show_one_error.py  test_anndataR_all42.R  test_anndataR_api.R  test_anndataR_h5ad_read.R  test_anndataR_write.R  test_c2a_quick.R  test_cellxgene_11.py  test_convert2anndata_detail.R  test_easyscf_h5ad_to_rds.R  test_easyscf_h5ad_to_rds.py  test_easyscf_roundtrip.py  test_install_c2a.R  test_mixed_roundtrip_debug.py  test_old_format.sh  test_oom_datasets.sh  test_rds_read.sh  test_zellkonverter_h5ad.R  test_zellkonverter_h5ad_read.R  test_zellkonverter_r_reader.R  test_zellkonverter_remaining.R  validate_output.py  verify_tools.sh
crosscell-py/: Cargo.toml  pyproject.toml
crosscell-py/src/: convert_from_anndata.rs  convert_to_anndata.rs  lib.rs
crosscell-py/tests/: test_converters.py  test_integration.py
crosscell-r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  configure
crosscell-r/R/: read.R  write.R
crosscell-r/src/: Makevars  Makevars.win  entrypoint.c
crosscell-r/src/rust/: Cargo.toml
crosscell-r/src/rust/.cargo/: config.toml
crosscell-r/src/rust/src/: convert_from_r.rs  convert_to_r.rs  lib.rs  tests.rs
crosscell-r/tests/: test_core_logic.R  test_r_objects.R  testthat.R
data/: 01_export_download_links.R  02_generate_seurat_data.R  03_inspect_seurat_data.R  04_convert_stxKidney_v5.R  05_download_h5ad.sh  05_download_h5ad_datasets.py  06_generate_datasets_json.py  07_package_for_zenodo.py  08_generate_split_layers_test.R  09_query_cellxgene_datasets.py  Dockerfile.seurat-v4  Dockerfile.seurat-v5  README.md  check_h5ad_files.py  docker-compose.datagen.yml  table.csv
data/seurat-packages/: .gitkeep  seuratdata_datasets.csv  seuratdata_download_links.txt
docs/: PERFORMANCE.md  RDS_SPEC.md  _Sidebar.md  advanced_usage.md  cli_reference.md  contributing.md  faq.md  home.md  installation.md  python_api.md  quick_start.md  r_api.md
docs/zh/: advanced_usage.md  cli_reference.md  contributing.md  faq.md  home.md  installation.md  python_api.md  quick_start.md  r_api.md
proptest-regressions/rds/: proptest.txt
scripts/: README.md  check_no_mock_data.py  download_test_datasets.R  download_test_datasets.py  generate_paired_data_easyscf.py  generate_sce_test.R  generate_seurat_v5_test.R  mock_check_config.yaml  test_performance.py  verify_accuracy.py  verify_environment.sh
src/: error.rs  lib.rs
src/anndata/: mod.rs  reader.rs  streaming.rs  writer.rs
src/backend/: hdf5.rs  memory.rs  mod.rs  rds.rs
src/diagnostics/: audit.rs  cleaner.rs  detector.rs  error_messages.rs  mod.rs
src/formats/: anndata.rs  loom.rs  mod.rs  registry.rs  sce.rs  seurat.rs
src/ir/: embeddings.rs  expression.rs  metadata.rs  mod.rs  spatial.rs  unstructured.rs
src/rds/: environment.rs  error.rs  external_pointer.rs  mod.rs  proptest.rs  r_object.rs  rds_file.rs  sexp_type.rs  string_encoding.rs  symbol.rs
src/sce/: error.rs  extract.rs  ir_to_sce.rs  mod.rs  sce_to_ir.rs
src/seurat/: assay5.rs  direct_read.rs  error.rs  extract.rs  ir_to_seurat.rs  mod.rs  seurat_to_ir.rs
src/sparse/: convert.rs  memory.rs  mod.rs  subset.rs  validate.rs
tests/: README.md  debug_1_8m.rs  rds_basic.rs  rds_r_compat.rs  run_h5ad_tests.sh  setup_test_datasets.sh  test_ai_ready.rs  test_audit_metrics.rs  test_backend.rs  test_cellxgene_r_validation.rs  test_class_field_read.rs  test_cross_format_validation.rs  test_dataframe_read.rs  test_debug_parse.rs  test_debug_rds.rs  test_debug_seurat_write.rs  test_dgc_simple.rs  test_dgcmatrix_write.rs  test_direct_read.rs  test_disk_backed.rs  test_empty_dataframe_read.rs  test_encoding_string.rs  test_fidelity_probe.rs  test_fidelity_probe_external.rs  test_h5ad_debug.rs  test_h5ad_partial_load.rs  test_h5ad_read.rs  test_h5ad_roundtrip.rs  test_h5ad_to_seurat_s4.R  test_h5ad_write.rs  test_ir_to_seurat.rs  test_list_with_class.rs  test_list_with_dgc_and_class_read.rs  test_list_with_null_read.rs  test_minimal_dgc_read.rs  test_minimal_nested_read.rs  test_multi_dataset_r_validation.R  test_multi_dataset_r_validation.rs  test_named_list_write.rs  test_nested_list_read.rs  (+37 more)
(+85 files in other folders)
