[workspace]
members = [".", "crosscell-py", "crosscell-r/src/rust"]
resolver = "2"

[package]
name = "crosscell-core"
version = "0.1.0"
edition = "2021"
authors = ["CrossCell Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/crosscell"
description = "High-performance H5AD and RDS format converter for single-cell transcriptomics data"

[lib]
name = "crosscell"
crate-type = ["rlib"]

[[bin]]
name = "crosscell"
path = "src/bin/main.rs"

[dependencies]
# 核心依赖
arrow = { version = "48.0", features = ["ipc", "csv", "json"] }
# 锁定 chrono 版本以避免 quarter() 方法冲突
chrono = "=0.4.31"
nalgebra-sparse = "0.9"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RDS 文件格式支持
byteorder = "1.5"
flate2 = "1.0"
num-complex = "0.4"

# HDF5 文件格式支持（用于 .h5ad 文件）
# 使用 hdf5-metno（metno fork，活跃维护，支持 HDF5 1.14.x / 2.0.0）
# 默认动态链接系统 HDF5 库（需要 libhdf5-dev >= 1.10）
# 使用 `cargo build --features hdf5-static` 可以静态编译内置 HDF5（2.0.0，支持所有格式）
ndarray = "0.15"
hdf5 = { package = "hdf5-metno", version = "0.12.3" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11.2", features = ["zlib"] }
libz-sys = { version = "1", features = ["libc"], default-features = false }

# CLI 依赖
clap = { version = "4.4", features = ["derive", "cargo"] }
env_logger = "0.11"
log = "0.4"
indicatif = "0.17"
anyhow = "1.0"
num_cpus = "1.16"
regex = "1.10"

# 磁盘支持的矩阵操作
memmap2 = "0.9"
lz4_flex = "0.11"
tempfile = "3.8"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3.8"
rand = "0.8"

[features]
# HDF5 静态编译为默认（内置 HDF5 2.0.0，无需系统 libhdf5-dev）
default = ["hdf5-static"]
hdf5-static = ["hdf5-sys/static"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "sparse_conversion"
harness = false

[[bench]]
name = "streaming_conversion"
harness = false
