[package]
name = "crosscell-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for CrossCell single-cell data converter"
license = "MIT OR Apache-2.0"

[lib]
name = "_crosscell_py"
crate-type = ["cdylib"]

[dependencies]
crosscell-core = { path = ".." }
pyo3 = { version = "0.21", features = ["extension-module"] }
arrow = { version = "48.0" }

[features]
default = ["hdf5-static"]
# Python wheel 默认静态链接 HDF5（用户不需要系统 libhdf5-dev）
hdf5-static = ["crosscell-core/hdf5-static"]
