[package]
name = "crosscell-r"
version = "0.1.0"
edition = "2021"
description = "R bindings for CrossCell single-cell data converter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

# Independent workspace: prevents conflict when this crate is built
# outside the main workspace (e.g., R-universe build servers)
[workspace]

[dependencies]
# Default: git dependency for R-universe / CRAN builds
# Local dev: override via .cargo/config.toml patch (see below)
crosscell-core = { path = "../../.." }
extendr-api = "0.7"
arrow = { version = "48.0" }

[features]
default = ["hdf5-static"]
hdf5-static = ["crosscell-core/hdf5-static"]
