[package]
name = "crosscell-r"
version = "0.1.0"
edition = "2021"
description = "R bindings for CrossCell single-cell data converter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

# Independent workspace: prevents conflict when this crate is built
# outside the main workspace (e.g., R-universe build servers)
[workspace]

[dependencies]
# Default: path dependency (works inside full repo)
# configure script switches to git dependency for R-universe/tarball builds
crosscell-core = { path = "../../.." }
extendr-api = "0.7"
arrow = { version = "48.0" }

# Pin versions to match crosscell-core's Cargo.lock
# Prevents R-universe from resolving incompatible versions
ndarray = "=0.15.6"
hdf5 = { package = "hdf5-metno", version = "=0.12.3" }
hdf5-sys = { package = "hdf5-metno-sys", version = "=0.11.2" }

[features]
default = ["hdf5-static"]
hdf5-static = ["crosscell-core/hdf5-static"]
